--- a/Natours/project-files/index.html
+++ b/Natours/project-files/index.html
@@ -86,6 +86,33 @@
                     </div>
                 </div>
             </section>
+            <section class="section_tours">
+                <div class="u-center-text u-margin-bottom-bg">
+                    <h2 class="heading-secondary">
+                        Most Popular Tours
+                    </h2>
+                </div>
+                <div class="row">
+                    <div class="col-1-of-3">
+                        <div class="card">
+                            <div class="card__side card__side--front">
+                                <div class="card__picture">&nbsp;</div>
+                                <div class="card__heading">heading</div>
+                                <div class="card__details">details</div>
+                            </div>
+                            <div class="card__side card__side--back card__side--back-1">
+                                Back
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-1-of-3">
+                        Col 1 of 3
+                    </div>
+                    <div class="col-1-of-3">
+                        Col 1 of 3
+                    </div>
+                </div>
+            </section>
         </main>
         <!-- <section class="grid-test">
             <div class="row">
