--- a/Natours/project-files/index.html
+++ b/Natours/project-files/index.html
@@ -14,6 +14,20 @@
         <title>Natours | Exciting tours for adventurous people</title>
     </head>
     <body>
+        <div class="navigation">
+            <input type="checkbox" class="navigation__checkbox" id="navi-toggle">
+            <label for="navi-toggle" class="navigation__button"><span class="navigation__icon">&nbsp;</span></label>
+            <div class="navigation__background">&nbsp;</div>
+            <nav class="navigation__nav">
+                <ul class="navigation__list">
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>01</span>About Natours</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>02</span>You benefits</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>03</span>Popular tours</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>04</span>Stories</a></li>
+                    <li class="navigation__item"><a href="#" class="navigation__link"><span>05</span>Book now</a></li>
+                </ul>
+            </nav>
+        </div>
         <header class='header'>
             <div class="header__logo-box">
                 <img src="./img/logo-white.png" alt="Logo" class="header__logo"/>
@@ -291,6 +305,26 @@
                 </div>
             </div>
         </footer>
+
+
+        <div class="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour Photo" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="Tour Photo" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <h2 class="heading-secondary u-margin-bottom-sm">Start booking now</h2>
+                    <h3 class="heading-tertiary u-margin-bottom-sm   ">Important &ndash; Please read these terms before booking</h3>
+                    <p class="popup__text">
+                        Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae modi neque illo, fuga atque repellendus a voluptatibus odit, adipisci sunt dolorem labore consectetur non quidem voluptatem ipsam ipsum totam incidunt.Lorem ipsum, dolor sit amet consectetur adipisicing elit. Quae modi neque illo, fuga atque repellendus a voluptatibus odit, adipisci sunt dolorem labore consectetur non quidem voluptatem ipsam ipsum totam incidunt.
+                    </p>
+                    <a href="#" class="btn btn--green">Book Now</a>
+                </div>
+            </div>
+        </div>
+
+
         <!-- <section class="grid-test">
             <div class="row">
                 <div class="col-1-of-2">
