--- a/Natours/project-files/index.html
+++ b/Natours/project-files/index.html
@@ -100,7 +100,7 @@
                     </div>
                 </div>
             </section>
-            <section class="section_tours">
+            <section class="section_tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-bg">
                     <h2 class="heading-secondary">
                         Most Popular Tours
@@ -131,7 +131,7 @@
 																		<p class="card__price-only">Only</p>
 																		<p class="card__price-value">$297</p>														
 																</div>
-																<a href="#" class="btn btn--white">Book Now!</a>
+																<a href="#popup" class="btn btn--white">Book Now!</a>
 																</div>
                             </div>
                         </div>
@@ -160,7 +160,7 @@
 															<p class="card__price-only">Only</p>
 															<p class="card__price-value">$297</p>														
 													</div>
-													<a href="#" class="btn btn--white">Book Now!</a>
+													<a href="#popup" class="btn btn--white">Book Now!</a>
 													</div>
 												</div>
 										</div>
@@ -189,7 +189,7 @@
 															<p class="card__price-only">Only</p>
 															<p class="card__price-value">$297</p>														
 													</div>
-													<a href="#" class="btn btn--white">Book Now!</a>
+													<a href="#popup" class="btn btn--white">Book Now!</a>
 													</div>
 												</div>
 										</div>
@@ -307,13 +307,14 @@
         </footer>
 
 
-        <div class="popup">
+        <div class="popup" id="popup">
             <div class="popup__content">
                 <div class="popup__left">
                     <img src="img/nat-8.jpg" alt="Tour Photo" class="popup__img">
                     <img src="img/nat-9.jpg" alt="Tour Photo" class="popup__img">
                 </div>
                 <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
                     <h2 class="heading-secondary u-margin-bottom-sm">Start booking now</h2>
                     <h3 class="heading-tertiary u-margin-bottom-sm   ">Important &ndash; Please read these terms before booking</h3>
                     <p class="popup__text">
